<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:id="@+id/scrollView"
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/area_name"
                android:textSize="20dp"
                />

            <EditText
                android:id="@+id/addAreaName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/longitude"
                android:textSize="20dp"
                />

            <EditText
                android:id="@+id/addAreaLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/latitude"
                android:textSize="20dp"
                />

            <EditText
                android:id="@+id/addAreaLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="20dp"
                />

            <Button
                android:id="@+id/openMap"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/open_map"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/radius"
                android:textSize="20dp"
                />

            <EditText
                android:id="@+id/addAreaRadius"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"
                android:textSize="20dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/wifi"
                android:textSize="20dp"
                />

            <EditText
                android:id="@+id/addAreaWifi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                />

            <Button
                android:id="@+id/openWifiList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/open_wifi_list"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="10dp"
                android:text="@string/ringtone"
                android:textSize="20dp"
                />

            <EditText
                android:id="@+id/addAreaRingtone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20dp"
                />

            <Button
                android:id="@+id/openRingtoneList"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/open_ringtone_list"
                android:textSize="20dp"/>



            <Button
                android:id="@+id/addAreaSave"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/save_area"
                android:textSize="20dp"/>


        </LinearLayout>

    </LinearLayout>
</ScrollView>